# LetiHome

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GEMINI.md  LICENSE  LetiHome.pro  PRIVACY  README.md  RELEASE  make_release.sh
.github/workflows/: android.yml  android_build_lite.yml  android_build_plus.yml
.github/workflows/android/: AndroidManifest.xml
.github/workflows/android/res/drawable/: ic_launcher_foreground.xml
.github/workflows/android/src/hr/envizia/letihome/: PackagesChangedReceiver.java
android/: .gitignore  AndroidManifest.xml  build.gradle  gradle.properties
android/res/drawable/: ic_banner_foreground.xml  ic_launcher_foreground.xml
android/res/values/: ic_banner_background.xml  ic_launcher_background.xml  strings.xml  themes.xml
android/src/com/qaap/letihome/: LetiHome.java  PackagesChangedReceiver.java
android/src/hr/envizia/letihome/: LetiHome.java  PackagesChangedReceiver.java
android/src/hr/envizia/letihomeplus/: LetiHomePlus.java  PackagesChangedReceiver.java
android/values/: ic_launcher_background.xml
cpp/: iconprovider.cpp  iconprovider.h  keymapper.cpp  keymapper.h  main.cpp  platform.cpp  platform.h
qml/: Controller.js  KeyPress.qml  Main.js  Main.qml  Options.qml  main.qml  qmldir
scripts/: android.ps1  android.sh  make_release.ps1  make_release.sh
src/: About.qml  App.js  App.qml  Home.qml  Main.qml  Options.qml  main.cpp  qmldir
src/components/: AppsGrid.qml  AppsList.qml  ColorLogo.js  IconBanner.qml  KeyPress.qml  TopBar.qml  qmldir
src/providers/: AppsProvider.qml  NavigationProvider.qml  PlatformProvider.qml  SettingsProvider.qml  bannerprovider.cpp  bannerprovider.h  iconprovider.h  keymapper.cpp  platform.cpp  platform.h  qmldir
